Add stb library.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rd/cimgui"]
 	path = 3rd/cimgui
 	url = https://github.com/cimgui/cimgui.git
+[submodule "3rd/stb"]
+	path = 3rd/stb
+	url = https://github.com/nothings/stb.git
